--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -1,24 +1,33 @@
-name: Telegram Bot to GitHub
+name: Upload files to GitHub release
 
 on:
   push:
-    branches: [ main ]
+    tags:
+      - v*
 
 jobs:
-  build:
+  upload-files:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
+      - uses: actions/checkout@v3
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-
       - name: Install dependencies
-        run: pip install -r requirements.txt
-
-      - name: Run Telegram Bot
-        run: python main.py
+        run: pip install pyTelegramBotAPI
+      - name: Get Telegram bot token
+        id: get_telegram_bot_token
+        run: echo ${{ secrets.TELEGRAM_BOT_TOKEN }}
+      - name: Get GitHub access token
+        id: get_github_access_token
+        run: echo ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload files to GitHub release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ steps.get_github_access_token.outputs.value }}
+          TELEGRAM_BOT_TOKEN: ${{ steps.get_telegram_bot_token.outputs.value }}
+          GITHUB_REPO_NAME: ${{ github.repository }}
+          GITHUB_REPO_RELEASE_TAG_NAME: ${{ github.ref }}
+          ASSET_PATH: ./path/to/file.zip
+          ASSET_NAME: file.zip
